# gf-pawndec

./: .gitignore  CMakeLists.txt  README.md  cmdlist.cpp  main.cpp  notes.txt
include/gfpawn/: gfpawn.h
include/gfpawn/amx/: amx.h  amx_commands.h  amx_constants.h  amx_opcodes.h  amx_util.h  xy_hashtable.h
include/gfpawn/ir/: ir.h
util/: cmdlist.cpp  cmdlistgen.py
